# bayesld

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
manuscript/: Manifest.toml  Project.toml  pyproject.toml
manuscript/analysis/01-theory-predictions/: Snakefile  bottleneck_exponential.py  data.npz  data.py  extract_data.py  generate_data.py  plot.jl  simulations.py
manuscript/analysis/02-constant-inference/: predictions.py  sbi_simulations.py  simulation.py
manuscript/tex/: library.bib  main.tex  outline.md
notebooks/: 01-constant.ipynb  02-exponential.ipynb  03-exponential-constant.ipynb  03-piecewise.ipynb  04-piecewise-constant.ipynb
python/bayesld/: __init__.py  models.py
python/tests/: test_all.py
src/: ldbucket.rs  lib.rs  main copy.rs
