[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "bayesld"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "arviz==0.22",
    "demesdraw>=0.4.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.3.8",
    "multiprocess>=0.70.18",
    "preliz==0.20.0",
    "pymc>=5.22.0",
    "sympy>=1.13.3",
    "sympytensor>=1.2.1",
]
[project.optional-dependencies]
tests = [
    "pytest",
]
[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
