[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "bayesld"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "arviz==0.22",
    "pymc>=5.22.0",
    "sympy>=1.13.3",
    "sympytensor>=1.2.1",
]
[project.optional-dependencies]
tests = [
    "pytest",
]
[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[tool.uv.workspace]
members = [
    "manuscript",
]

[dependency-groups]
dev = [
    "demesdraw>=0.4.1",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.4.10",
    "msprime>=1.3.4",
    "multiprocess>=0.70.18",
    "preliz>=0.23.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
